# PocketLedger

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
.github/workflows/: build-companion.yml  docs.yml  release.yml
backend/: .gitignore  go.mod  go.sum  main.go  pb_schema.json
backend/collections/: schema.go
backend/handlers/: barcode.go  billing.go  locations.go  logs.go  stats.go  stock.go  transfers.go
backend/middleware/: roles.go
backend/services/: barcode.go  stats.go
companion_app/: .gitignore  android_manifest_additions.xml  index.html  package-lock.json  package.json  patch_manifest.py  pubspec.yaml  tsconfig.json  vite.config.ts
companion_app/android/app/: build.gradle.kts
companion_app/lib/: main.dart
companion_app/linux/: CMakeLists.txt
companion_app/src/: App.svelte  app.css
companion_app/src-tauri/: Cargo.toml  tauri.conf.json
companion_app/src-tauri/android/app/src/main/: AndroidManifest.xml
companion_app/src-tauri/android/app/src/main/kotlin/com/pocketledger/companion/: PrintPlugin.kt  PrintService.kt
companion_app/src-tauri/capabilities/: default.json
companion_app/src-tauri/icons/: icon.icns
companion_app/src-tauri/src/: escpos.rs  lib.rs  main.rs  print_server.rs  settings.rs  tspl.rs
companion_app/test/: widget_test.dart
companion_app/windows/: CMakeLists.txt
docs/: linux-setup.md  printers.md  windows-setup.md
docs-site/: astro.config.mjs  package-lock.json  package.json
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
(+85 files in other folders)
