[package]
name = "pocketledger-companion"
version = "1.0.0"
edition = "2021"

[lib]
name = "pocketledger_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pocketledger-companion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
